testing/macro-tests/tests/ui/generated_unsupported_path.stderr
error: generated(insert = ...) currently supports only Ulid::generate or Timestamp::now
  --> tests/ui/generated_unsupported_path.rs:25:21
   |
25 |             ident = "token",
   |                     ^^^^^^^
